--- a/mandelbulber2/qt/dock_effects.ui
+++ b/mandelbulber2/qt/dock_effects.ui
@@ -83,7 +83,7 @@
       <enum>QTabWidget::West</enum>
      </property>
      <property name="currentIndex">
-      <number>0</number>
+      <number>1</number>
      </property>
      <property name="usesScrollButtons">
       <bool>true</bool>
@@ -1155,9 +1155,9 @@ per pixel:</string>
           <property name="geometry">
            <rect>
             <x>0</x>
-            <y>0</y>
+            <y>-336</y>
             <width>551</width>
-            <height>1414</height>
+            <height>1489</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_35">
@@ -1890,7 +1890,7 @@ Set 100 to keep compatibility with version &lt;=2.12</string>
                    </sizepolicy>
                   </property>
                   <property name="maximum">
-                   <number>100</number>
+                   <number>100000</number>
                   </property>
                  </widget>
                 </item>
@@ -1992,9 +1992,9 @@ Set 100 to keep compatibility with version &lt;=2.12</string>
                </widget>
               </item>
               <item>
-               <widget class="MyGroupBox" name="groupCheck_clouds_advanced_geometry">
+               <widget class="MyGroupBox" name="groupCheck_clouds_plain_shape">
                 <property name="title">
-                 <string>Advanced geometry</string>
+                 <string>Plain shape</string>
                 </property>
                 <property name="checkable">
                  <bool>true</bool>
@@ -2210,6 +2210,57 @@ Set 100 to keep compatibility with version &lt;=2.12</string>
                  </item>
                 </layout>
                </widget>
+              </item>
+             </layout>
+            </widget>
+           </item>
+           <item>
+            <widget class="MyGroupBox" name="groupCheck_clouds_distance_mode">
+             <property name="title">
+              <string>Clouds at distance from fractal</string>
+             </property>
+             <property name="checkable">
+              <bool>true</bool>
+             </property>
+             <layout class="QVBoxLayout" name="verticalLayout_13">
+              <property name="leftMargin">
+               <number>2</number>
+              </property>
+              <property name="topMargin">
+               <number>2</number>
+              </property>
+              <property name="rightMargin">
+               <number>2</number>
+              </property>
+              <property name="bottomMargin">
+               <number>2</number>
+              </property>
+              <item>
+               <layout class="QGridLayout" name="gridLayout_21">
+                <property name="spacing">
+                 <number>2</number>
+                </property>
+                <item row="0" column="0">
+                 <widget class="QLabel" name="label_125">
+                  <property name="text">
+                   <string>Distance from fractal</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="0" column="1">
+                 <widget class="MyLineEdit" name="logedit_clouds_distance"/>
+                </item>
+                <item row="1" column="0">
+                 <widget class="QLabel" name="label_126">
+                  <property name="text">
+                   <string>Clouds layer height</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="1" column="1">
+                 <widget class="MyLineEdit" name="logedit_clouds_distance_layer"/>
+                </item>
+               </layout>
               </item>
              </layout>
             </widget>
